Better handling of commands
